<resources>
    <string name="app_name">Clubbook</string>
    <string name="sing_in_with_facebook">Sign In with Facebook</string>
    <string name="sign_up_by_email">Sign Up with Email</string>
    <string name="splash_intro">Get Social in The Club</string>
    <string name="fb_app_id">1504805883074351</string>
    <string name="drawer_open">Slider Menu Opened</string>
    <string name="drawer_close">Slider Menu Closed</string>
    <string name="desc_list_item_icon">Item Icon</string>
    <string name="email">E-mail</string>
    <string name="password">Password</string>
    <string name="first_name">First Name</string>
    <string name="birthday">Birthday</string>
    <string name="bio">bio</string>
    <string name="name_incorrect">Name is incorrect</string>
    <string name="email_incorrect">Email is incorrect </string>
    <string name="pass_incorrect">Password is incorrect</string>
    <string name="avatar_incorrect">Avatar is missing</string>
    <string name="dob_incorrect">Birthday is incorrect</string>
    <string name="no_connection">No Internet connection</string>
    <string name="no_location">Please enable location</string>
    <string name="retry_button">Retry</string>
    <string name="log_in">Log In</string>
    <string name="km">km</string>
    <string name="m">m</string>
    <string name="check_in">Check-in</string>
    <string name="check_out">Check-out</string>
    <string name="club_avatar_content_description">club avatar</string>
    <string name="add_friend">Add Friend</string>
    <string name="chat">Chat</string>
    <string name="about_me">About Me</string>
    <string name="block_user">Block\nUser</string>
    <string name="remove_friend">Remove\nFriend</string>
    <string name="remove">Remove</string>
    <string name="sing_up">Sign Up</string>
    <string name="open_today">Open Today:</string>
    <string name="info_and_wall">Info &amp; Wall</string>
    <string name="checked_in">Checked-in</string>
    <string name="checked_in_double_dots">Checked-in:</string>
    <string name="not_checked_in">Not Checked-in</string>
    <string name="friends">Friends</string>
    <string name="share">Share</string>
    <string name="capacity">Capacity</string>
    <string name="dress_code">Dress Code</string>
    <string name="age_restrictions">Age Restrictions</string>
    <string name="closed">closed</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="sunday">Sunday</string>
    <string name="clubs">Clubs</string>
    <string name="going_out">Going Out</string>
    <string name="users_nearby">Users Nearby</string>
    <string name="checked_in_">Checked-In</string>
    <string name="fast_check_in">Fast Check-in</string>
    <string name="messages">Messages</string>
    <string name="settings">Settings</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="Netherlands">Netherlands</string>
    <string name="push_notifications">Push Notifications</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="terms_of_service">Terms of Service</string>
    <string name="delete_account">Delete Account</string>
    <string name="contact">Contact</string>
    <string name="log_out">Log Out</string>
    <string name="question_about_clubbook">Question about Clubbook</string>
    <string name="club_page">Club Page</string>
    <string name="friend_list">Friend List</string>
    <string name="user_profile">User Profile</string>
    <string name="set_as_default">Set as default</string>
    <string name="delete">Delete</string>
    <string name="save">Save</string>
    <string name="edit_user_profile">Edit User Profile</string>
    <string name="loading">Loading&#8230;</string>
    <string name="upload_new_image">Uploading new image&#8230;</string>
    <string name="deleting_image">Deleting image&#8230;</string>
    <string name="take_from_camera">Take from camera</string>
    <string name="select_from_gallery">Select from gallery</string>
    <string name="select_image">Select Image</string>
    <string name="can_not_find_image_crop_app">Can not find image crop app</string>
    <string name="complete_action_using">"Complete action using"</string>
    <string name="share_us_on_facebook">Share Us on Facebook</string>
    <string name="tweet_about_us">Tweet About Us</string>
    <string name="like_us_on_facebook">Like Us on Facebook</string>
    <string name="follow_our_tweets">Follow Our Tweets</string>
    <string name="like">Like</string>
    <string name="send">Send</string>
    <string name="invites_for_a_drink">invites for a Drink</string>
    <string name="likes_the_profile">likes the Profile</string>
    <string name="checking_in">Checking-in&#8230;</string>
    <string name="checking_out">Checking-out&#8230;</string>
    <string name="yesterday">Yesterday</string>
    <string name="today">Today</string>
    <string name="requests">Requests</string>
    <string name="accept_request">Accept\nRequest</string>
    <string name="accept">Accept</string>
    <string name="incorrect_credentials">Incorrect credentials</string>
    <string name="problem_occurred_please_try_again">Problem occurred, please, try again</string>
    <string name="ok">Ok</string>
    <string name="share_to">Share to&#8230;</string>
    <string name="password_min_six_characters">Password (minimum 6 characters)</string>
    <string name="decline">Decline</string>
    <string name="you_cannot_send_three_messages_without_reply">You cannot send more than 3 messages to this user without receiving a reply</string>
    <string name="deleting_profile">Deleting profile&#8230;</string>
    <string name="something_went_wrong_please_try_again">Something went wrong, please try again</string>
    <string name="error">Error</string>
    <string name="login_failed">Login failed</string>
    <string name="cancel">Cancel</string>
    <string name="choose_an_email_provider">Choose an email provider:</string>
    <string name="are_you_sure_you_want_delete_your_account">Are you sure you want to Delete Your Account?</string>
    <string name="are_you_sure_you_want_to_log_out">Are you sure you want to Log Out?</string>
    <string name="are_you_sure_you_want_to_check_out">Are you sure you want to Check-out?</string>
    <string name="default_about_me">Hi, I\'m using Clubbook.</string>
    <string name="user_with_this_email_has_already_exist">User with this email has already exist</string>
    <string name="you_must_be_18_age_to_be_able_use_clubbook">You must be 18+ age to be able use Clubbook</string>
    <string name="are_you_sure_you_want_unfriend_this_user">Are you sure you want to \'Unfriend\' this user?</string>
    <string name="removing_friend">Removing Friend</string>
    <string name="request_pending">Request\nPending</string>
    <string name="profile_pictures_will_be_visible">Profile pictures will be visible when %d users more are checked-in</string>
    <string name="no_users">No users</string>
    <string name="no_name">No name</string>
    <string name="we_dont_post_anything_to_facebook">We don\'t post anything to Facebook</string>
    <string name="by_signing_into_clubook_you_agree_with_the">By Signing into Clubbook, you agree with the</string>
    <string name="open_in">Open in&#8230;</string>
    <string name="are_you_sure_you_want_delete_this_photo">Are you sure you want to Delete this photo?</string>
    <string name="uploading">Uploading&#8230;</string>
    <string name="choose_crop_app">Choose Crop App</string>
    <string name="where_are_you">Where are you?</string>
    <string name="open_settings">Open Settings</string>
    <string name="wait_until_clubbook_will_determine_your_current_location">Wait until Clubbook will determine your current location&#8230;</string>
    <string name="in_order_for_you_to_see_clubs_and_profile">In order for you to see Clubs and Profiles nearby, we need to know your current location</string>
    <string name="need_to_check_in_first">To interact with this user, you need to Check-in to this Club first</string>
    <string name="enable_notification_vibration">Enable Notification Vibration</string>
    <string name="visible_nearby">Visible Nearby</string>
    <string name="user_information_saved">User information saved</string>
    <string name="no_messages">No messages</string>
    <string name="no_friends_added">No friends added</string>
    <string name="open">Open</string>
    <string name="closed_display">Closed</string>
    <string name="you_need_to_be_within_m_in_order_to_check_in">You need to be within %sm in order to Check-in</string>
    <string name="no_users_checked_in_yet">No users Checked-in yet</string>
    <string name="currently_no_users_checked_in">Currently no users Checked-in</string>
    <string name="about">About</string>
    <string name="hours">Hours</string>
    <string name="info">Info</string>
    <string name="wall">Wall</string>
    <string name="this_page_is_soon_to_be_loaded_with">This page is soon to be loaded with</string>
    <string name="interesting_stuff">Interesting Stuff!</string>
    <string name="cancel_request">Cancel\nRequest</string>
    <string name="canceling">Canceling</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="reset_password">Reset Password</string>
    <string name="current_password">Current password</string>
    <string name="new_password">New password</string>
    <string name="confirm_new_password">Confirm new password</string>
    <string name="current_password_is_too_short">Current password is too short (minimum 6 characters)</string>
    <string name="new_password_is_too_short">New password is too short (minimum 6 characters)</string>
    <string name="you_must_enter_the_same_password_twice">You must enter the same password twice in order to confirm it</string>
    <string name="password_changed">Password changed</string>
    <string name="changing_password">Changing password&#8230;</string>
    <string name="password_is_too_short">Password is too short (minimum 6 characters)</string>
    <string name="unblock_user">Unblock\nUser</string>
    <string name="block_user_process">Block user&#8230;</string>
    <string name="unblock_user_process">Unblock user&#8230;</string>
    <string name="you_cannot_add_remove_friend_when_user_is_blocked">You can\'t add, remove friend when user is blocked</string>
    <string name="you_will_be_automatically_checked_in_to_this_club">You will be automatically Checked-in to this Club for 6 hours, or until you manually Check-out or Check-in to another Club</string>
    <string name="ok_got_it">Ok, got it</string>
    <string name="add_friends">Add friends</string>
    <string name="find_friends">Find friends</string>
    <string name="invite_friends">Invite friends</string>
    <string name="invite_friends_by_facebook">Invite friends by Facebook</string>
    <string name="see_who_is_already_on_clubbook">See who is already on Clubbook</string>
    <string name="or">Or</string>
    <string name="request_sent">Request sent</string>
    <string name="connect_facebook">Connect Facebook</string>
    <string name="find_your_friends">Find your friends</string>
    <string name="add_plus">Add+</string>
    <string name="add_friend_">Add Friend</string>
    <string name="accept_request_">Accept Request</string>
    <string name="cancel_request_">Cancel Request</string>
    <string name="remove_friend_">Remove Friend</string>
    <string name="no_friends">No friends</string>
    <string name="club_profile">Club Profile</string>
    <string name="users_checked_in_yesterday">Users Checked-in Yesterday</string>
</resources>