<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="16dp"
    android:paddingRight="16dp">

    <com.nl.clubbook.ui.view.HelveticaRegularEditText
        android:id="@+id/editOldPassword"
        android:layout_width="fill_parent"
        android:layout_height="48dp"
        android:layout_marginTop="8dp"
        android:hint="@string/current_password"
        android:inputType="textPassword"
        android:singleLine="true"
        android:textColor="@color/grey" />

    <com.nl.clubbook.ui.view.HelveticaRegularEditText
        android:id="@+id/editNewPassword"
        android:layout_width="fill_parent"
        android:layout_height="48dp"
        android:layout_marginTop="8dp"
        android:hint="@string/new_password"
        android:inputType="textPassword"
        android:singleLine="true"
        android:layout_marginBottom="4dp"
        android:textColor="@color/grey"/>

    <com.nl.clubbook.ui.view.HelveticaRegularEditText
        android:id="@+id/editConfirmNewPassword"
        android:layout_width="fill_parent"
        android:layout_height="48dp"
        android:layout_marginTop="8dp"
        android:hint="@string/confirm_new_password"
        android:inputType="textPassword"
        android:singleLine="true"
        android:layout_marginBottom="4dp"
        android:textColor="@color/grey"/>

    <com.nl.clubbook.ui.view.HelveticaBoldTextView
        android:id="@+id/txtResetPassword"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_btn_violet_light"
        android:gravity="center"
        android:text="@string/reset_password"
        android:textColor="@android:color/white"
        android:textSize="@dimen/text_size_medium"
        android:layout_marginTop="24dp"/>

</LinearLayout>