<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/main_background_color"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="60dp"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/logo" />

        <com.nl.clubbook.ui.view.TitilliumBoldTextView
            android:id="@+id/intro_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:text="@string/splash_intro"
            android:textColor="#FFFFFF"
            android:textSize="17sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:orientation="vertical">

        <TextView
            android:id="@+id/termsTxt"
            android:layout_width="184dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="10dp"
            android:gravity="center"
            android:text="@string/terms"
            android:textColor="#CDC2CE"
            android:textColorLink="#CDC2CE"
            android:textSize="@dimen/text_size_small" />

        <com.nl.clubbook.ui.view.TitilliumRegularButton
            android:id="@+id/login_fb"
            style="@style/main_login_button"
            android:background="@drawable/fb_button"
            android:text="@string/sing_in_with_facebook" />

        <com.nl.clubbook.ui.view.TitilliumBoldButton
            android:id="@+id/reg_by_email"
            style="@style/main_login_button"
            android:background="@drawable/reg_button"
            android:text="@string/sign_up_by_email" />

        <com.nl.clubbook.ui.view.TitilliumRegularButton
            android:id="@+id/login_by_email"
            style="@style/main_login_button"
            android:background="@drawable/main_button"
            android:text="@string/log_in" />

    </LinearLayout>

</RelativeLayout>
