<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.nl.clubbook.ui.view.HelveticaBoldTextView
        android:id="@+id/txtInviteFriends"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/invite_friends_by_facebook"
        android:gravity="center"
        android:textSize="@dimen/text_size_medium"
        android:textColor="@android:color/white"
        android:layout_marginRight="16dp"
        android:layout_marginLeft="16dp"
        android:background="@drawable/bg_btn_blue"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingRight="16dp"
        android:paddingLeft="16dp"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        android:gravity="center_vertical">

        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="1"
            android:background="@color/divider_color"/>

        <com.nl.clubbook.ui.view.HelveticaRegularTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingRight="8dp"
            android:paddingLeft="8dp"
            android:text="@string/or"/>

        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="1"
            android:background="@color/divider_color"/>

    </LinearLayout>

    <com.nl.clubbook.ui.view.HelveticaRegularTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="8dp"
        android:text="@string/see_who_is_already_on_clubbook"
        android:gravity="center"
        android:textSize="@dimen/text_size_medium"
        android:textColor="@color/grey"/>

    <com.nl.clubbook.ui.view.HelveticaBoldTextView
        android:id="@+id/txtConnectFacebook"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/connect_facebook"
        android:gravity="center"
        android:textSize="@dimen/text_size_medium"
        android:textColor="@android:color/white"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:background="@drawable/bg_btn_blue"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="8dp"
        android:background="@color/divider_color"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ListView
            android:id="@+id/listAvailableFriends"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scrollbars="none"/>

        <include
            layout="@layout/view_progress_bar"
            android:layout_height="@dimen/progress_bar_size"
            android:layout_width="@dimen/progress_bar_size"
            android:layout_centerInParent="true"
            android:visibility="gone" />

        <TextView
            android:id="@+id/txtNoFriends"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no_friends"
            android:textSize="@dimen/text_size_medium"
            android:layout_centerInParent="true"
            android:visibility="gone"
            android:padding="16dp"
            android:gravity="center"/>

    </RelativeLayout>
</LinearLayout>